changed h1 to very large form and background colour to darkgrey

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,10 +1,11 @@
 ﻿body
 {
- background-color:brown;
+ background-color:darkgray;
 
       
 }
 h1{
+    font-size:100px;
     color:salmon;
 }
 ul{
